--- a/ChessTrainer.ipynb
+++ b/ChessTrainer.ipynb
@@ -6,12 +6,14 @@
    "source": [
     "Learning the game of chess as a neural network\n",
     "\n",
-    "1. We will process chess game data to be vectorized for a network to learn from\n",
+    "1. First we will define our board state in accordance to Claude Shannons Defenition 
+    https://vision.unipv.it/IA1/ProgrammingaComputerforPlayingChess.pdf\n",
     "\n",
-    "2. Training convolutional neural networks as a heuristic evaluator\n",
+    "2. We will gather atleast a few million chess moves from high ELO games from 
+       http://caissabase.co.uk/\n",
     "\n",
-    "3. "
-   ]
+    "3. We will train a neural network to fulfill the heuristic evaluation function \n"
+    "4. We will use our heuristic evaluator to evaluate the game trees and call it to play chess "   ]
   },
   {
    "cell_type": "code",
