--- a/ChessTrainer.ipynb
+++ b/ChessTrainer.ipynb
@@ -12,8 +12,9 @@
     "2. We will gather atleast a few million chess moves from high ELO games from 
        http://caissabase.co.uk/\n",
     "\n",
-    "3. We will train a neural network to fulfill the heuristic evaluation function \n"
-    "4. We will use our heuristic evaluator to evaluate the game trees and call it to play chess "   ]
+    "3. We will train a neural network to fulfill the heuristic evaluation function \n
+     4. We will use our heuristic evaluator to evaluate the game trees and call it to play chess "
+     ]
   },
   {
    "cell_type": "code",
